[metadata]
name = pip_search
version = 0.0.7
author = Victor Garric
author_email = victor.garric@gmail.com
url = https://github.com/victorgarric/pip_search
description = A package to search like pip used to via PyPi
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    bs4
    requests
    rich
python_requires = >=3.

[options.packages.find]
exclude = tests

[options.entry_points]
console_scripts =
    pip_search=pip_search.__main__:main
